EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==05/01/2010==
Trevius: Added new Perl NPC quest object GetSwarmTarget() to get the ID of a swarm pet's set target.
Trevius: Added new Perl NPC quest object SetSwarmTarget(target_id) to set the ID of a swarm pet's target.
Derision: Group member locations are now always updated in entity_list.SendPositionUpdates (for SoD group member location on map).
Derision: Certain detrimental spells will still allow the player to enter a rested state.

REQUIRED SQL:

utils/sql/svn/1446_allowrest_required.sql

OPTIONAL SQL: (Read the comments in it before executing)

utils/sql/svn/1446_allowrest_optional.sql


==04/30/2010==
Trevius: Fixed a bug that would cause clients in an existing trade to get bugged if another client tried to trade with them during their existing trade.
Trevius: Added new Perl Mob quest object MakeTempPet(spell_id, [name=NULL, duration=0, target=NULL]).
Trevius: Added new Perl NPC quest object GetSwarmOwner() to get the ID of a swarm pet's owner.
Trevius: Hide will now break if you move when not sneaking, even if you have invisibility on.
Derision: Fixed bug in Guild Bank.
gaeorn: reverted my change from 4/24 as it did not work.

==04/29/2010==
gaeorn: fixed tables to avoid login server hang if ServerTagDescription in tblWorldServerRegistration is null

Optional SQL: utils/sql/svn/1436_login_server_table_fix.sql

==04/28/2010==
Trevius: Attempting to trade with a player who is already in a trade will now give the "I'm busy right now" message for all clients.
Derision: Applied slot conversion so Apply Poison should now work in SoF.
gaeorn: login server now creates db entries for unregistered servers to keep same id across sessions
Derision: Fixed a cash amount display bug when the two participants in a Barter transaction are using different clients.

==04/27/2010==