@@ -91,6 +91,7 @@ public:
 	
 	void RecordInvite(int32 char_id, int32 guild_id, int8 rank);
 	bool VerifyAndClearInvite(int32 char_id, int32 guild_id, int8 rank);
+	void SendGuildMemberUpdateToWorld(const char *MemberName, uint32 GuildID, uint16 ZoneID, uint32 LastSeen);
 
 protected:
 	virtual void SendGuildRefresh(int32 guild_id, bool name, bool motd, bool rank, bool relation);
